version/2.30/ripscrip/2.1-lines.md
# 2.1 Lines

[◀ Prev: 2.0 Color Modes & Palettes](2.0-color-modes-and-palettes.md) · [Contents](README.md) · [Next: 2.2 Curves ▶](2.2-curves.md)

This page covers the straight-line drawing primitives — single pixels, lines, and multi-segment poly-lines — together with the line-style state (pattern and thickness) they draw with. All of these draw in the current drawing color ([RIP_COLOR](2.0-color-modes-and-palettes.md#rip_color)), honor the current [write mode](2.0-color-modes-and-palettes.md#rip_write_mode), and are clipped to the current port's [viewport](../../GLOSSARY.md). Two 2.x extensions over [the 1.54 record](../../1.54/ripscrip/2.1-lines.md): patterned lines can draw their "off" pixels in the background color ([RIP_BACK_COLOR](2.0-color-modes-and-palettes.md#rip_back_color)) instead of transparently, and line thickness is now arbitrary (1.54 allowed only 1 or 3 pixels). Curved outlines are in [2.2 Curves](2.2-curves.md); closed and filled shapes are in [2.3 Shapes & Fills](2.3-shapes-and-fills.md).

## RIP_PIXEL

_Draws one pixel using current drawing color_

|               |             |
| ------------- | ----------- |
| **Level**     | 0           |
| **Command**   | `X`         |
| **Arguments** | `x:XY y:XY` |

**Format:** `!|X <x> <y>` **Example:** `!|X1122`

**Attributes used:** Draw Color, Write Mode, Viewport, Port, Base Math (current setting)

This command will draw a single pixel in the current drawing color at the given (x,y) graphics position. This command is included for completeness, but in practice it would be extremely inefficient to make heavy use of it.

## RIP_LINE

_Draw a line in the current color/line style_

|               |                           |
| ------------- | ------------------------- |
| **Level**     | 0                         |
| **Command**   | `L`                       |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY` |

**Format:** `!|L <x0> <y0> <x1> <y1>` **Example:** `!|L00010A0E`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command will draw a line in the current drawing color, using the current line style, pattern and thickness. The line is drawn from (x0,y0) to (x1,y1) in the graphics viewport.

## RIP_POLYLINE

_Added in RIPscrip v1.54._

_Draw a Poly-Line (multi-faceted line)_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `l`                                     |
| **Arguments** | `npoints:2 x1:XY y1:XY ... xn:XY yn:XY` |

**Format:** `!|l <npoints> <x1> <y1> ... <xn> <yn>` **Example:** `!|l03010105090905`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command will draw a multi-faceted line. It is identical in nature to the [RIP_POLYGON](2.3-shapes-and-fills.md#rip_polygon) command above, except that the last point is NOT connected to the first point. Generally speaking, a Poly-Line is not an "enclosed area". The segments of the Poly-Line are drawn using the current drawing color, line pattern, thickness and Drawing Write Mode.

The `<npoints>` parameter is between 2 and 512 and indicates how many (x,y) coordinate pairs will follow, which is also the number of sides of the Poly-Line.

An example of a five sided (6 vertices) Poly-Line might be:

```text
P1 o                                             o P6
    ▀▄                          o P4           ▄▀
      ▀▄                      ▄▀█            ▄▀
        ▀▄                  ▄▀  █          ▄▀
          ▀▄              ▄▀    █        ▄▀
            ▀▄          ▄▀      █      ▄▀
              ▀o▄▄▄▄▄▄o▀        █    ▄▀
             P2       P3        █  ▄▀
                              P5█▄▀
                                o
```

## RIP_LINE_STYLE

_Defines a line's pattern and thickness_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `=`                                     |
| **Arguments** | `off_draw:1 style:1 user_pat:4 thick:2` |

**Format:** `!|= <off_draw> <style> <user_pat> <thick>` **Example:** `!|=01000001`

**Attributes used:** Line Style, Base Math (current setting)

This command establishes the current line pattern and thickness for many subsequent graphics primitive commands. There are four built-in line styles plus provisions for custom line patterns.

| Style | Description | Binary | Hex |
| --- | --- | --- | --- |
| 0 | Normal, Solid Line | 1111111111111111 | FFFF |
| 1 | Dotted Line | 0011001100110011 | 3333 |
| 2 | Centered Line | 0001111000111111 | 1E3F |
| 3 | Dashed Line | 0001111100011111 | 1F1F |
| 4 | Custom Defined line (see about `<user_pat>` below) |  |  |

If the `<style>` is set to a value of 4 (custom pattern), then the `<user_pat>` parameter is used as a 16-bit representation of the pixels in the line pattern. For example:

| Repeating Pattern | Binary Coding    | Hex  | Decimal | MegaNum |
| ----------------- | ---------------- | ---- | ------- | ------- |
| `- - - - - - - -` | 1010101010101010 | AAAA | 43690   | 0XPM    |
| `----    ----`    | 1111000011110000 | F0F0 | 61680   | 1BLC    |

So, the most-significant-bit of `<user_pat>` is toward the starting point of the line or border that uses this fill pattern. If the `<style>` parameter is not 4, then the `<user_pat>` parameter is ignored.

In RIPscrip v2.0, the off spaces of a patterned line can now be something other than transparent (as in 1.x RIPscrip format). If the `<off_draw>` parameter is set to a non-zero value, then the current pen background color is used to draw the off pixels of a patterned line. The values of the `<off_draw>` field are as follows:

| Value | Description                                |
| ----- | ------------------------------------------ |
| 0     | Draw off pixels as transparent pixels      |
| 1     | Draw off pixels using pen background color |

In earlier verions of RIPscrip (v1.54 and earlier), only two different line thickness options were allowed (1 pixel wide and 3 pixels wide). In 2.00 and later revisions, arbitrary thicknesses of lines are supported from 1 pixel on up. If the thickness is an even number than it is up to the destination system's graphics engine to determine whether the even pixel is drawn to the left or right of the center point in vertical orientations, or above/below for horizontal orientations. In any event, the thickness value of lines is specified by the `<thick>` parameter. _(v2.A1)_

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is executed that resets the environment, the current line style is set to a single pixel wide solid line. Off pixels are set to transparent mode. _(v2.A3)_

---

[◀ Prev: 2.0 Color Modes & Palettes](2.0-color-modes-and-palettes.md) · [Contents](README.md) · [Next: 2.2 Curves ▶](2.2-curves.md)
