version/3.0/ripscrip/2.1-lines.md
# 2.1 Lines

[◀ Prev: 2.0 Color Modes & Palettes](2.0-color-modes-and-palettes.md) · [Contents](README.md) · [Next: 2.2 Curves ▶](2.2-curves.md)

_Reconstructed edition - every claim carries an evidence tag; see [Contents](README.md) for the legend._

Straight-line primitives - single pixels, points, lines and multi-segment poly-lines - the line-style state (pattern and thickness) they draw with, and the 3.x-era census discovery [RIP_MARKER](#rip_marker).

_The 1.54 record of these commands is [2.1 in the v1.54 reference](../../1.54/ripscrip/2.1-lines.md)._

## RIP_PIXEL

_Draws one pixel using current drawing color_

|               |             |
| ------------- | ----------- |
| **Level**     | 0           |
| **Command**   | `X`         |
| **Arguments** | `x:XY y:XY` |

**Format:** `!|X <x> <y>` **Example:** `!|X0032`

**Attributes used:** Draw Color, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.1-lines.md#rip_pixel)) · HLP (`RIP_Pixel`) · corpus (7 uses in LANDSCPE.RIP, EAGLE.RIP) · SyncTERM (ripper.c:14084)

This command will draw a single pixel in the current drawing color at the given (x,y) graphics position. This command is included for completeness, but in practice it would be extremely inefficient to make heavy use of it.

The 2.0-era sibling [RIP_POINT](#rip_point) (`j`) coexists with it in both the HLP inventory and the corpus.

## RIP_POINT

_Draws one pixel using current drawing color (2.0 form)_

|               |             |
| ------------- | ----------- |
| **Level**     | 0           |
| **Command**   | `j`         |
| **Arguments** | `x:XY y:XY` |

**Format:** `!|j <x> <y>` **Example:** `!|jNK62`

**Attributes used:** Draw Color, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** HLP (`RIP_Point`) · corpus (8 uses in SEABYME1.RIP, SEANITE.RIP) · SyncTERM (ripper.c:14518 - provenance comment "Not in Alpha docs") - not documented in the 2.00a4 spec

A [world-coordinate](../../GLOSSARY.md) point plot, the 2.0/3.x sibling of the 1.54 [RIP_PIXEL](#rip_pixel) (`X`), which both survive side by side. SyncTERM's authors flagged it as absent from the 2.0-Alpha documents; the RIPSCRIP.HLP inventory and the seascape demos confirm it is real (stars/detail dots in SEANITE.RIP). The distinction from `X` is presumed to be resolution-independent world-frame mapping _(hypothesis)_.

## RIP_LINE

_Draw a line in the current color/line style_

|               |                           |
| ------------- | ------------------------- |
| **Level**     | 0                         |
| **Command**   | `L`                       |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY` |

**Format:** `!|L <x0> <y0> <x1> <y1>` **Example:** `!|L1C2J1H2K`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.1-lines.md#rip_line)) · HLP (`RIP_Line`) · corpus (7,574 uses in 23 files - the most-used drawing command) · SyncTERM (ripper.c:13800)

This command will draw a line in the current drawing color, using the current line style, pattern and thickness. The line is drawn from (x0,y0) to (x1,y1) in the graphics viewport.

By raw count this is the corpus's dominant primitive: the hand-digitized artwork scenes (SHUTTLE.RIP, SAILBOAT.RIP, HAWK.RIP, SPACSHUT.RIP, FOUND.RIP) are essentially thousands of short line strokes.

## RIP_POLYLINE

_Added in RIPscrip v1.54._

_Draw a Poly-Line (multi-faceted line)_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `l`                                     |
| **Arguments** | `npoints:2 x1:XY y1:XY ... xn:XY yn:XY` |

**Format:** `!|l <npoints> <x1> <y1> ... <xn> <yn>` **Example:** `!|l0E0A20462046244B244B9G469G469K0A9K0A9G059G05240A240A200A20`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.1-lines.md#rip_polyline)) · HLP (`RIP_Polyline`) · corpus (6 uses in 3 files) · SyncTERM (ripper.c:14529)

This command will draw a multi-faceted line. It is identical in nature to the [RIP_POLYGON](2.3-shapes-and-fills.md#rip_polygon) command, except that the last point is NOT connected to the first point. Generally speaking, a Poly-Line is not an "enclosed area". The segments of the Poly-Line are drawn using the current drawing color, line pattern, thickness and Drawing Write Mode.

The `<npoints>` parameter indicates how many (x,y) coordinate pairs will follow, which is also the number of sides of the Poly-Line. The 2.00a4 vertex limit of 512 is raised in the 3.0 driver: RIPtel's readme and HLP error strings allow **4096 vertices** for polygon-class objects. The N2_TITLE.RIP example above is a 14-vertex (`0E`) newspaper rule.

An example of a five sided (6 vertices) Poly-Line might be:

```text
P1 o                                             o P6
    ▀▄                          o P4           ▄▀
      ▀▄                      ▄▀█            ▄▀
        ▀▄                  ▄▀  █          ▄▀
          ▀▄              ▄▀    █        ▄▀
            ▀▄          ▄▀      █      ▄▀
              ▀o▄▄▄▄▄▄o▀        █    ▄▀
             P2       P3        █  ▄▀
                              P5█▄▀
                                o
```

## RIP_LINE_STYLE

_Defines a line's pattern and thickness_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `=`                                     |
| **Arguments** | `off_draw:1 style:1 user_pat:4 thick:2` |

**Format:** `!|= <off_draw> <style> <user_pat> <thick>` **Example:** `!|=001EKF03`

**Attributes used:** Line Style, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.1-lines.md#rip_line_style)) · HLP (`RIP_LineStyle`) · corpus (120 uses in 31 files) · SyncTERM (ripper.c:13369, descriptor `2#4#2#`)

This command establishes the current line pattern and thickness for many subsequent graphics primitive commands. There are four built-in line styles plus provisions for custom line patterns.

| Style | Description | Binary | Hex |
| --- | --- | --- | --- |
| 0 | Normal, Solid Line | 1111111111111111 | FFFF |
| 1 | Dotted Line | 0011001100110011 | 3333 |
| 2 | Centered Line | 0001111000111111 | 1E3F |
| 3 | Dashed Line | 0001111100011111 | 1F1F |
| 4 | Custom Defined line (see about `<user_pat>` below) |  |  |

If the `<style>` is set to a value of 4 (custom pattern), then the `<user_pat>` parameter is used as a 16-bit representation of the pixels in the line pattern. For example:

| Repeating Pattern | Binary Coding    | Hex  | Decimal | MegaNum |
| ----------------- | ---------------- | ---- | ------- | ------- |
| `- - - - - - - -` | 1010101010101010 | AAAA | 43690   | 0XPM    |
| `----    ----`    | 1111000011110000 | F0F0 | 61680   | 1BLC    |

So, the most-significant-bit of `<user_pat>` is toward the starting point of the line or border that uses this fill pattern. If the `<style>` parameter is not 4, then the `<user_pat>` parameter is ignored.

In RIPscrip v2.0, the off spaces of a patterned line can now be something other than transparent (as in 1.x RIPscrip format). If the `<off_draw>` parameter is set to a non-zero value, then the current pen background color is used to draw the off pixels of a patterned line. The values of the `<off_draw>` field are as follows:

| Value | Description                                |
| ----- | ------------------------------------------ |
| 0     | Draw off pixels as transparent pixels      |
| 1     | Draw off pixels using pen background color |

In earlier verions of RIPscrip (v1.54 and earlier), only two different line thickness options were allowed (1 pixel wide and 3 pixels wide). In 2.00 and later revisions, arbitrary thicknesses of lines are supported from 1 pixel on up. If the thickness is an even number than it is up to the destination system's graphics engine to determine whether the even pixel is drawn to the left or right of the center point in vertical orientations, or above/below for horizontal orientations. In any event, the thickness value of lines is specified by the `<thick>` parameter. _(v2.A1)_

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is executed that resets the environment, the current line style is set to a single pixel wide solid line. Off pixels are set to transparent mode. _(v2.A3)_

The 3.x corpus exercises the full syntax as documented: the example above, from ONLINE.RIP, sets a custom pattern `1EKF` at thickness 3, and NEWCMDS.RIP prologues use it exactly per spec ("Solid line 3 pixel wide": `!|=00000003`). HLP error strings add that a custom line pattern "can't have blank pattern".

## RIP_MARKER

_Draw a predefined marker/symbol glyph at a point_ _(hypothesized name)_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `;` |
| **Arguments** | `x:2 y:2 marker_type:2 x_size:2 y_size:2 rotation:2 flags:2` _(last two fields uncertain; from census analysis)_ |

**Format:** `!|; <x> <y> <marker_type> <x_size> <y_size> <rotation?> <flags?>` **Example:** `!|;1L40001S1S0000`

**Attributes used:** Draw Color, Back Color, Fill Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (MARKER.RIP - title text "RIPscrip Markers" - and MARKER2.RIP; 361 uses) - not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM. Name _(hypothesis)_.

Stamps one of a set of predefined marker/symbol glyphs at a point, scaled by an x/y size pair, using the current fill style - MARKER2.RIP cycles the fill color (`S010G`…`S010V`) per marker to prove it. Fourteen-character arguments decompose as seven 2-digit fields: position, marker type (`00`-`0C` in the first demo row, `0E`… in MARKER2.RIP), sizes, then four more digits presumed rotation + flags _(hypothesis)_ - observed values `0000`, `0003`, `8C03`. At 361 uses across two dedicated demo scenes, this is the most heavily exercised of the undocumented 3.x primitives. See the [script census](../../3.0/research/riptel-script-census.md) for the full field analysis.

---

[◀ Prev: 2.0 Color Modes & Palettes](2.0-color-modes-and-palettes.md) · [Contents](README.md) · [Next: 2.2 Curves ▶](2.2-curves.md)
